# python-starter-template

./: .gitignore  .pre-commit-config.yaml  CHANGELOG.md  CONTRIBUTING.md  LICENSE  Makefile  README.md  ci.html  contributing.html  cookiecutter.html  cookiecutter.json  devcontainer.html  docs_build.html  features.html  genindex.html  index.html  objects.inv  pyproject.toml  quickstart.html  release.html  requirements.txt  search.html  searchindex.js  structure.html  testing.html
.devcontainer/: Dockerfile  devcontainer.json
.github/workflows/: ci.yml  package_build.yml  release.yml
_sources/: contributing.rst.txt  devcontainer.rst.txt  structure.rst.txt  testing.rst.txt
docs/: Makefile  ci.rst  conf.py  cookiecutter.rst  docs_build.rst  features.rst  index.rst  quickstart.rst  release.rst
