[project]
name = "python-starter-template"
version = "0.1.0"
description = "A modern Python starter template with DevContainers, uv, pytest, ruff, sphinx, and CI."
authors = [
    { name="Michael Dold", email="michael.dold@gmx.net" }
]
keywords = ["python","template","devcontainer","ci","semantic-release"]
readme = "README.md"
license = "MIT"
requires-python = ">=3.10"

dependencies = [
    "uv",
    "ruff",
    "pytest",
    "sphinx",
    "sphinxcontrib-mermaid",
    "marimo",
]

[project.urls]
"Repository" = "https://github.com/michdo/python-starter-template"
"Documentation" = "https://michdo.github.io/python-starter-template/"

[dependency-groups]
dev = [
    "pytest-cov",
    "pre-commit",
    "python-semantic-release >=8.0.0",
    "build",
    "furo",
    "cookiecutter",
    "sphinx-copybutton",
    "sphinx-panels",
    "sphinx-tabs",
]

[build-system]
requires = ["setuptools>=61.0", "wheel"]
build-backend = "setuptools.build_meta"

[tool.ruff]
line-length = 100
target-version = "py311"

[tool.pytest.ini_options]
minversion = "7.0"
addopts = "-ra"
testpaths = [
    "tests",
]

[tool.sphinx]
builder = "html"
source-dir = "docs"
build-dir = "public"

[tool.semantic_release]
version_variable = "src/playground/__init__.py:__version__"
upload_to_pypi = false            # change to true when you’re ready to publish
tag_format = "v{version}"
